--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-60J1DPU;Database=MemoAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MemoDbConnection": "Server=DESKTOP-60J1DPU;Database=MemoAppDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbConnection": "Server=DESKTOP-60J1DPU;Database=MemoAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
