Added Audit, fixed DefaultSettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "MemoDbConnection": "Server=DESKTOP-60J1DPU;Database=MemoAppDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDbConnection": "Server=DESKTOP-60J1DPU;Database=MemoAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MemoDbConnection": "Server=localhost;Database=MemoDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbConnection": "Server=localhost;Database=MemoDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
